--- a/index.html
+++ b/index.html
@@ -17,37 +17,39 @@
                 </div>
                 <div id="buttons">
                     <div id="row1" class="button-row">
-                        <input type="button" value="AC" class="symbol">
-                        <input type="button" value="DE" class="symbol">
-                        <input type="button" value="." class="symbol">
-                        <input type="button" value="/" class="symbol">
+                        <input type="button" value="AC" class="symbol" onclick="display.value = '' ">
+                        <input type="button" value="DE" class="symbol" onclick="display.value = display.value.slice(0, -1)">
+                        <input type="button" value="." class="symbol" onclick="display.value += this.value">
+                        <input type="button" value="/" class="symbol" onclick="display.value += this.value">
                     </div>
                     <div id="row2" class="button-row">
-                        <input type="button" value="7" class="number">
-                        <input type="button" value="8" class="number">
-                        <input type="button" value="9" class="number">
-                        <input type="button" value="*" class="symbol">
+                        <input type="button" value="7" class="number" onclick="display.value += this.value">
+                        <input type="button" value="8" class="number" onclick="display.value += this.value">
+                        <input type="button" value="9" class="number" onclick="display.value += this.value">
+                        <input type="button" value="*" class="symbol" onclick="display.value += this.value">
                     </div>
                     <div id="row3" class="button-row">
-                        <input type="button" value="4" class="number">
-                        <input type="button" value="5" class="number">
-                        <input type="button" value="6" class="number">
-                        <input type="button" value="-" class="symbol">
+                        <input type="button" value="4" class="number" onclick="display.value += this.value">
+                        <input type="button" value="5" class="number" onclick="display.value += this.value">
+                        <input type="button" value="6" class="number" onclick="display.value += this.value">
+                        <input type="button" value="-" class="symbol" onclick="display.value += this.value">
                     </div>
                     <div id="row4" class="button-row">
-                        <input type="button" value="1" class="number">
-                        <input type="button" value="2" class="number">
-                        <input type="button" value="3" class="number">
-                        <input type="button" value="+" class="symbol">
+                        <input type="button" value="1" class="number" onclick="display.value += this.value">
+                        <input type="button" value="2" class="number" onclick="display.value += this.value">
+                        <input type="button" value="3" class="number" onclick="display.value += this.value">
+                        <input type="button" value="+" class="symbol" onclick="display.value += this.value">
                     </div>
                     <div id="row5" class="button-row">
-                        <input type="button" value="00" class="number">
-                        <input type="button" value="0" class="number">
-                        <input type="button" value="=" class="symbol">
+                        <input type="button" value="00" class="number" onclick="display.value += this.value">
+                        <input type="button" value="0" class="number" onclick="display.value += this.value">
+                        <input type="button" value="=" class="symbol" onclick="display.value = eval(display.value)">
                     </div>
                 </div>
             </form>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
