--- a/index.html
+++ b/index.html
@@ -12,38 +12,38 @@
     <div id="container">
         <div id="calculator">
             <form>
-                <div id="display">
+                <div id="display-box">
                     <input type="text" name="display">
                 </div>
                 <div id="buttons">
                     <div id="row1" class="button-row">
-                        <input type="button" value="AC" class="symbol" onclick="display.value = '' ">
-                        <input type="button" value="DE" class="symbol" onclick="display.value = display.value.slice(0, -1)">
-                        <input type="button" value="." class="symbol" onclick="display.value += this.value">
-                        <input type="button" value="/" class="symbol" onclick="display.value += this.value">
+                        <input type="button" value="AC" class="symbol" onclick="clearDisplay()">
+                        <input type="button" value="DE" class="symbol" onclick="deleteNumber()">
+                        <input type="button" value="." class="symbol" onclick="insertNumber(this.value)">
+                        <input type="button" value="/" class="symbol" onclick="insertNumber(this.value)">
                     </div>
                     <div id="row2" class="button-row">
-                        <input type="button" value="7" class="number" onclick="display.value += this.value">
-                        <input type="button" value="8" class="number" onclick="display.value += this.value">
-                        <input type="button" value="9" class="number" onclick="display.value += this.value">
-                        <input type="button" value="*" class="symbol" onclick="display.value += this.value">
+                        <input type="button" value="7" class="number" onclick="insertNumber(this.value)">
+                        <input type="button" value="8" class="number" onclick="insertNumber(this.value)">
+                        <input type="button" value="9" class="number" onclick="insertNumber(this.value)">
+                        <input type="button" value="*" class="symbol" onclick="insertNumber(this.value)">
                     </div>
                     <div id="row3" class="button-row">
-                        <input type="button" value="4" class="number" onclick="display.value += this.value">
-                        <input type="button" value="5" class="number" onclick="display.value += this.value">
-                        <input type="button" value="6" class="number" onclick="display.value += this.value">
-                        <input type="button" value="-" class="symbol" onclick="display.value += this.value">
+                        <input type="button" value="4" class="number" onclick="insertNumber(this.value)">
+                        <input type="button" value="5" class="number" onclick="insertNumber(this.value)">
+                        <input type="button" value="6" class="number" onclick="insertNumber(this.value)">
+                        <input type="button" value="-" class="symbol" onclick="insertNumber(this.value)">
                     </div>
                     <div id="row4" class="button-row">
-                        <input type="button" value="1" class="number" onclick="display.value += this.value">
-                        <input type="button" value="2" class="number" onclick="display.value += this.value">
-                        <input type="button" value="3" class="number" onclick="display.value += this.value">
-                        <input type="button" value="+" class="symbol" onclick="display.value += this.value">
+                        <input type="button" value="1" class="number" onclick="insertNumber(this.value)">
+                        <input type="button" value="2" class="number" onclick="insertNumber(this.value)">
+                        <input type="button" value="3" class="number" onclick="insertNumber(this.value)">
+                        <input type="button" value="+" class="symbol" onclick="insertNumber(this.value)">
                     </div>
                     <div id="row5" class="button-row">
-                        <input type="button" value="00" class="number" onclick="display.value += this.value">
-                        <input type="button" value="0" class="number" onclick="display.value += this.value">
-                        <input type="button" value="=" class="symbol" onclick="display.value = eval(display.value)">
+                        <input type="button" value="00" class="number" onclick="insertNumber(this.value)">
+                        <input type="button" value="0" class="number" onclick="insertNumber(this.value)">
+                        <input type="button" value="=" class="symbol" onclick="evalDisplay()">
                     </div>
                 </div>
             </form>
